...
"CALL" = "CALL";

/*Contact driver sms option*/
"SMS" = "SMS";

/*Cancel alert option*/
"CANCEL" = "CANCEL";

/*Alert option*/
"NO" = "NO";

/*Alert option*/
"YES" = "YES";

/*Alert option*/
"Ok" = "Ok";

/*Alert option*/
"Skip" = "Skip";

/*Message to show when requesting price estimated and destination is not set*/
"Please select a destination location to get estimates." = "Please select a destination location to get estimates.";

/*Message to show when requesting price estimated and pickup is not set*/
"Please select a pickup location to get estimates." = "Please select a pickup location to get estimates.";
...
"Destination has been changed to \"%@\"" = "Destination has been changed to \"%@\"";

/*Version outdated message*/
"VERSION_OUTDATED" = "The version you are using is outdated. Please download the latest version from the App Store or contact support.";

/*Generic error title*/
"GENERIC_ERROR_TITLE" = "Oops";

/*Error while trying to cancel a ride already started*/
"Too Late" = "Too Late";

/*Error message - cannot cancel started trip*/
"The driver has started the trip. You cannot cancel after the trip has started." = "The driver has started the trip. You cannot cancel after the trip has started.";

/*No Driver Available alert title*/
"No Driver Available" = "No Driver Available";

/*No Driver Available alert message*/
"We are sorry currently no driver is available at your location." = "We are sorry currently no driver is available at your location.";

/*No Driver Available alert message - when there are drivers on map*/
"No drivers available right now, please try again later." = "No drivers available right now, please try again later.";

/*Ride is cancelled by driver message*/
"Your ride is cancelled by the driver." = "Your ride is cancelled by the driver.";

/*Ride cancellation fee for no show*/
"Your ride has been cancelled by the driver. You've been charged a $%.2f cancellation fee for no show." = "Your ride has been cancelled by the driver. You've been charged a $%.2f cancellation fee for no show.";
...
"Send" = "Send";

/*Support success message*/
"SUCCESS\nWe'll be in touch soon." = "SUCCESS\nWe'll be in touch soon.";

/*Create profile title*/
"CREATE A PROFILE" = "CREATE A PROFILE";

/*Next button title*/
"Next" = "Next";

/*Privacy policy title*/
"Privacy Policy" = "Privacy Policy";
...
"Verify Mobile" = "Verify Mobile";

/*PinVC - SMS sent to number*/
"that was sent to %@" = "that was sent to %@";

/*RegisterInfoVC - Title*/
"Create Account" = "Create Account";

/*Email confirmation message*/
"Please confirm your email address" = "Please confirm your email address";

/*Correct alert option*/
"Correct" = "Correct";

/*Re-enter alert option*/
"Re-enter" = "Re-enter";

/*Login alert option*/
"Login" = "Login";

/*Edit alert option*/
"Edit" = "Edit";

/*RegisterInfoVC - Validations*/
"Please enter your email address." = "Please enter your email address.";
"Please enter a valid email address." = "Please enter a valid email address.";
"Please enter a valid mobile phone number. i.e Minimum 8 digits and Max 15 digits" = "Please enter a valid mobile phone number. i.e Minimum 8 digits and Max 15 digits";
"Please enter your mobile phone number." = "Please enter your mobile phone number.";
"Please enter a valid mobile phone number. i.e Minimum 8 digits and Max 15 digits" = "Please enter a valid mobile phone number. i.e Minimum 8 digits and Max 15 digits";
"Please enter a password." = "Please enter a password.";
"Your password needs to be at least %li characters long." = "Your password needs to be at least %li characters long.";

/*Dismiss button title*/
"Dismiss" = "Dismiss";

/*Placeholder for SupportViewController*/
"Share Details" = "Share Details";

/*SupportVC subtitle*/
"Help" = "Help";
...
"SAVE" = "SAVE";

/*Done button title*/
"DONE" = "DONE";

/*LoginVC Title*/
"Sign In" = "Sign In";

/*Sign In failed title*/
"SIGN IN FAILED" = "SIGN IN FAILED";

/*Sign In error and last sign in was with fb message*/
". Did you mean to sign in using Facebook?" = ". Did you mean to sign in using Facebook?";
...
