...
    
    var mapView: XCUIElement{
        return app.otherElements["googleMapsView"]
    }
    
    var navigationBar: XCUIElement {
        return app.navigationBars["LocationViewControllerNavigationBar"]
    }
    
    var navigationMenuButton: XCUIElement{
        return app.buttons["show menu"]
    }

...
    
    var destinationTextField: XCUIElement {
        return app.buttons["txtDestination"]
    }
    
    var setPickUpButton: XCUIElement{
        return app.buttons["SET PICKUP LOCATION"]
    }
    
    var carCategoriesSliderButton: XCUIElement {
        return app.buttons["carCategoriesChevronButton"]
    }
    
...
    
    var commentTextField: XCUIElement {
        return app.textFields["CommentTextField"]
    }
    
    var disableRoundUpButton: XCUIElement {
        return app.buttons["Disable Round Up"]
    }
    
    var driverInfoView: XCUIElement {
        return app.otherElements["Driver Info View"]
    }
    
...
