...
        [options addAction:[RAAlertAction actionWithTitle:[@"YES" localized] style:UIAlertActionStyleDestructive handler:^(UIAlertAction * _Nullable action) {
            [weakSelf cancelRequestTapped:nil];
        }]];
        
        [options addAction:[RAAlertAction actionWithTitle:[@"NO" localized] style:UIAlertActionStyleCancel handler:nil]];
        
        self.cancelRideRequestAlert = [RAAlertManager showAlertWithTitle:[ConfigurationManager appName] message:[@"Do you really want to cancel this ride?" localized] options:options];
    } else {
        [self.navigationController popViewControllerAnimated:YES];
    }
}

- (IBAction)categoryChooserTapped:(id)sender {
...
